# easydata

./: .gitignore  LICENSE  README.md  README_en.md
docs/: coding-standards.md  flash_kv_implementation_report.md  requirements.md
docs/plans/: 2025-02-25-flash-kv-design.md  2025-02-25-flash-kv-implementation.md
flash_kv/: CLAUDE.md  CMakeLists.txt  LICENSE  README.md
flash_kv/demo/stm32/: CMakeLists.txt  Makefile  README.md  main.c  stm32_flash.c  stm32_flash.h  stm32f407vg.ld
flash_kv/docs/: flash_kv_design.md
flash_kv/inc/: flash_kv.h  flash_kv_config.h  flash_kv_types.h
flash_kv/src/: flash_kv_core.c  flash_kv_crc.c  flash_kv_crc.h  flash_kv_hash.c  flash_kv_hash.h  flash_kv_utils.c  flash_kv_utils.h
flash_kv/test/: flash_kv_test.c  mock_flash.c
